--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "sequelize": "^6.18.0"
   },
