--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.3",
-    "sequelize": "^6.18.0"
+    "sequelize": "^6.18.0",
+    "xendit-node": "^1.21.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^6.1.2",
